# Magnetic_Encoder_Rust_Fw

./: Cargo.toml  Embed.toml
.cargo/: config
.github/workflows/: checks.yml  clippy.yml  compile.yml
src/: as5147p.rs  can_types.rs  encoder.rs  main.rs  memory.rs  spi_ext.rs  status.rs
tests/: test.rs
