[package]
name = "mag_encoder_firmware"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.4"
cortex-m-rtic = "0.5.5"
alloc-cortex-m = "0.4"
stm32f1 = "0.11.0"
panic-halt = ""
panic-abort = ""
embedded-hal = "0.2.3"
nb = "1.0.0"
volatile = "0.3.0"
heapless = "0.5.6"
bxcan = "0.2.3"
num-traits = { version="0.2.14", default-features = false }
defmt = "0.1"
defmt-rtt = "0.1"
bitfield = "0.13.2"

[features]
has-5V = []
defmt-default = []
defmt-trace = []
default =[
    "defmt-trace"
]

[dependencies.stm32f1xx-hal]
version = ""
features = ["stm32f103", "rt", "stm32-usbd"] 

[dependencies.linked_list_allocator]
version = "0.8"
features = ["const_mut_refs"]

[patch.crates-io]
stm32f1xx-hal = { git = "https://github.com/timokroeger/stm32f1xx-hal", branch="bxcan", features = ["stm32f103", "rt", "stm32-usbd", "has-can"] }
bxcan = {git = "https://github.com/stm32-rs/bxcan" }

[[bin]]
name = "mag_encoder_firmware"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
debug-assertions = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z" 
debug-assertions = false
