[package]
name = "mag_encoder_firmware"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
stm32f1 = "0.11.0"
# panic-halt = ""
# panic-abort = ""
embedded-hal = "0.2.3"
nb = "1.0.0"
volatile = "0.3.0"
heapless = "0.5.6"
bxcan = "0.4"
num-traits = { version="0.2.14", default-features = false }
defmt = "0.1"
defmt-rtt = "0.1"
bitfield = "0.13.2"
asm-delay = "0.9"

[features]
has-5V = []
wipe-mem = []

defmt-default = []
defmt-trace = []
defmt-debug = []

default =[
    "has-5V",
    "defmt-debug"
]

[dependencies.stm32f1xx-hal]
version = ""
features = ["stm32f103", "rt", "stm32-usbd"] 

[patch.crates-io]
stm32f1xx-hal = { git = "https://github.com/timokroeger/stm32f1xx-hal", branch="bxcan", features = ["stm32f103", "rt", "stm32-usbd", "has-can"] }
bxcan = {git = "https://github.com/stm32-rs/bxcan" }

[[bin]]
name = "mag_encoder_firmware"
test = false
bench = false

# [dev-dependencies]
# cargo-husky = "1"

[dev-dependencies.cargo-husky]
version = "^1"
default-features = false
features = ["prepush-hook", "run-cargo-clippy", "run-cargo-check", "run-cargo-fmt"]

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
debug-assertions = true

[profile.dev.package.'*']
opt-level = 'z'
debug = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z' 
debug-assertions = false

[profile.release.package.'*']
opt-level = 'z'
debug = true

# [profile.release.package.stm32f1xx-hal]
# opt-level = 0
# debug = true
